fix overflow

--- a/src/components/me/meSlide/me.module.css
+++ b/src/components/me/meSlide/me.module.css
@@ -76,6 +76,7 @@
   }
   .swiperSlideTextP{
     font-size: 0.7rem;
+    overflow: auto;
   }
   .swiperSlideTextSpan{
     font-size: 1rem;
